--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     <li><a href="#"><i class="fa fa-linkedin fa-2x"></i></a></li>
                     <li><a href="#"><i class="fa fa-instagram fa-2x"></i></a></li>
                     <p> Ottawa, Ontario - 613-613-6133</p>
-                    <p>&copy; 2017 Green Energy</p>
+                    <p>&copy; 2017 Hot Topics</p>
                 </div>
             </div>
         </div>
