--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>The Value of Money</title>
+    <title>Hot Topics</title>
     <link rel="stylesheet" href="./css/main.css">
     <link rel="stylesheet" href="./font-awesome/css/font-awesome.min.css"> </head>
 
